--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,9 +75,28 @@
         <!--<attr name="T_world_name" format="string"/>-->
         <!--<attr name="T_world_name_size" format="dimension"/>-->
 
+    <declare-styleable name="ManSpinner">
+        <attr name="manspinner_name" format="string" />
+        <attr name="manspinner_title" format="string" />
+        <attr name="manspinner_size" format="dimension" />
+    </declare-styleable>
+
     <declare-styleable name="ClientSpinner">
         <attr name="clientspinner_name" format="string" />
         <attr name="clientspinner_size" format="dimension" />
         <attr name="clientspinner_hint" format="string" />
     </declare-styleable>
+
+
+
+    <style name="DialogTheme" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+    </style>
 </resources>
